<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PlayingActivity">

    <LinearLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/prim_black"
        android:orientation="horizontal">
    </LinearLayout>

    <View
        android:id="@+id/nav_menu"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:src="@drawable/ic_two_arrow_left_playing"
        android:background="@drawable/layout_nav_btn_invisible"
        app:layout_constraintTop_toTopOf="@id/nav_menu"
        app:layout_constraintStart_toStartOf="@id/nav_menu"
        android:contentDescription="@string/back_to_menu" />

    <ProgressBar
        android:id="@+id/progressBarHorizontal"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:indeterminate="false"
        android:max="100"
        android:minHeight="25dp"
        android:progress="25"
        android:progressBackgroundTint="@color/easy_white"
        android:progressTint="@color/sec_black"
        app:layout_constraintBottom_toTopOf="@id/player_menu"
        app:layout_constraintStart_toStartOf="@id/player_menu"
        app:layout_constraintEnd_toEndOf="@id/player_menu"/>

    <TextView
        android:id="@+id/song_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:backgroundTint="@color/easy_white"
        android:textColor="@color/easy_white"
        style="bold"
        app:layout_constraintBottom_toTopOf="@id/player_menu"
        app:layout_constraintTop_toTopOf="@id/progressBarHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/song_progress"/>

    <View
        android:id="@+id/player_menu"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:background="@drawable/layout_bg"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="10sp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageButton
        android:id="@+id/rewind_back_button"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginBottom="20sp"
        android:src="@drawable/ic_rewind_back_playing"
        android:background="@drawable/layout_btn_invisible"
        app:layout_constraintBottom_toBottomOf="@id/player_menu"
        app:layout_constraintStart_toEndOf="@id/previous_button"
        app:layout_constraintEnd_toStartOf="@id/pause_button"
        android:contentDescription="@string/rewind_song" />


    <ImageButton
        android:id="@+id/rewind_forward_button"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginBottom="20sp"
        android:src="@drawable/ic_rewind_forward_playing"
        android:background="@drawable/layout_btn_invisible"
        app:layout_constraintBottom_toBottomOf="@id/player_menu"
        app:layout_constraintStart_toEndOf="@id/pause_button"
        app:layout_constraintEnd_toStartOf="@id/next_button"
        android:contentDescription="@string/forward_song" />

    <View
        android:layout_width="85sp"
        android:layout_height="85sp"
        android:layout_marginBottom="6sp"
        android:layout_marginStart="20sp"
        android:background="@drawable/layout_btn_visible_neon"
        app:layout_constraintBottom_toBottomOf="@id/player_menu"
        app:layout_constraintStart_toStartOf="@id/player_menu" />

    <ImageButton
        android:id="@+id/previous_button"
        android:layout_width="75sp"
        android:layout_height="75sp"
        android:layout_marginBottom="10sp"
        android:layout_marginStart="25sp"
        android:src="@drawable/ic_leftwards_arrow_to_bar_playing"
        android:background="@drawable/layout_btn_visible"
        app:layout_constraintBottom_toBottomOf="@id/player_menu"
        app:layout_constraintStart_toStartOf="@id/player_menu"
        android:contentDescription="@string/play_previous_song" />

    <View
        android:layout_width="85sp"
        android:layout_height="85sp"
        android:layout_marginBottom="6sp"
        android:background="@drawable/layout_btn_visible_neon"
        app:layout_constraintBottom_toBottomOf="@id/player_menu"
        app:layout_constraintStart_toEndOf="@id/previous_button"
        app:layout_constraintEnd_toStartOf="@id/next_button" />

    <ImageButton
        android:id="@+id/pause_button"
        android:layout_width="75sp"
        android:layout_height="75sp"
        android:layout_marginBottom="10sp"
        android:src="@drawable/ic_pause_playing"
        android:background="@drawable/layout_btn_visible"
        app:layout_constraintBottom_toBottomOf="@id/player_menu"
        app:layout_constraintStart_toEndOf="@id/previous_button"
        app:layout_constraintEnd_toStartOf="@id/next_button"
        android:contentDescription="@string/pause_song" />

    <View
        android:layout_width="85sp"
        android:layout_height="85sp"
        android:layout_marginBottom="6sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/layout_btn_visible_neon"
        app:layout_constraintBottom_toBottomOf="@id/player_menu"
        app:layout_constraintEnd_toEndOf="@id/player_menu" />

    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="75sp"
        android:layout_height="75sp"
        android:layout_marginBottom="10sp"
        android:layout_marginEnd="25sp"
        android:src="@drawable/ic_rightwards_arrow_to_bar_playing"
        android:background="@drawable/layout_btn_visible"
        app:layout_constraintBottom_toBottomOf="@id/player_menu"
        app:layout_constraintEnd_toEndOf="@id/player_menu"
        android:contentDescription="@string/play_next_song" />

</androidx.constraintlayout.widget.ConstraintLayout>